fixing about us text on mobile

--- a/elite/styles.css
+++ b/elite/styles.css
@@ -93,7 +93,7 @@ body, html {
 
 #bg4 p {
     text-align: left;
-    width: 100%;
+    width: 80%;
 }
 
 #bg4-overlay {
